[package]
name = "audiosocket"
description = "Crate for handling AudioSocket messages"
repository = "https://github.com/ivan770/audiosocket"

version = "1.0.0"
authors = ["ivan770 <leshenko.ivan770@gmail.com>"]
license = "MIT"

edition = "2018"

[dependencies]
num_enum = "0.5"
uuid = "0.8"
thiserror = "1.0"